# rust-mcp-server

./: Cargo.toml  DOCKER_DEPLOYMENT.md  DOCKER_HUB_DEPLOYMENT.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  README.md  docker-compose.yml  trigger.txt
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
src/: cache.rs  main.rs  models.rs  visitors.rs
src/tools/: check_file.rs  find_references.rs  goto_definition.rs  index_workspace.rs  mod.rs  server_handler.rs
