[package]
name = "rust-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "signal", "io-util", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
syn = { version = "2.0", features = ["full", "visit"] }
regex = "1.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1.21"
quote = "1.0"
schemars = "1.1"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

rmcp = { version = "0.9.1", features = ["transport-io"] }

# Optional: if you later want to enable rust-analyzer integration, activate the `ra` feature
[features]
default = []
ra = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3.0"
